--- a/craig-ranch-vegas-homes/package.json
+++ b/craig-ranch-vegas-homes/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "description": "Luxury real estate website for Craig Ranch Vegas Homes - Find your dream home in Las Vegas' most prestigious community",
-  "keywords": ["real estate", "las vegas", "craig ranch", "luxury homes", "nevada"],
+  "keywords": [
+    "real estate",
+    "las vegas",
+    "craig ranch",
+    "luxury homes",
+    "nevada"
+  ],
   "author": "Craig Ranch Vegas Homes",
   "scripts": {
     "dev": "next dev --turbopack",
@@ -15,19 +21,20 @@
     "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
+    "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
-    "@eslint/eslintrc": "^3"
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
