--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
