--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "app",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
@@ -91,6 +92,7 @@
         "@types/three": "^0.178.0",
         "eslint": "^9.31.0",
         "eslint-config-next": "^15.4.1",
+        "eslint-plugin-import": "^2.31.1",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.3.5",
         "typescript": "^5"
