--- a/package.json
+++ b/package.json
@@ -55,26 +55,26 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.5",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.559.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.5",
     "next": "15.3.6",
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.8.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-day-picker": "^9.12.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.3",
     "react-syntax-highlighter": "^15.6.1",
-    "recharts": "^3.0.2",
+    "recharts": "^3.5.1",
     "simplex-noise": "^4.0.3",
-    "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
     "three-globe": "^2.43.0",
@@ -85,15 +85,15 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "20.19.26",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.178.0",
-    "eslint": "^9.31.0",
-    "eslint-config-next": "^15.4.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^15.5.7",
     "eslint-plugin-import": "^2.31.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
