--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -84,6 +87,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.19.26",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -92,6 +96,8 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "^15.5.7",
     "eslint-plugin-import": "^2.31.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.9.3"
