--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -61,7 +64,7 @@
     "lucide-react": "^0.559.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.5",
-    "next": "15.3.6",
+    "next": "^15.5.8",
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
     "react": "^19.2.1",
@@ -94,7 +97,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.178.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^15.5.7",
+    "eslint-config-next": "^15.5.8",
     "eslint-plugin-import": "^2.31.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
